<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="45dp"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/settings"
            android:textSize="22sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/show_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_brand" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/show_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_product" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/show_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_code" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/show_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_status" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/show_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_image" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/cameraId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_front_camera" />
    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_close" />

</LinearLayout>
